--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -340,3 +340,66 @@ $navbar-toggler-transition:         box-shadow .15s ease-in-out !default;
       margin-bottom: 0;
     }
   }
+
+  .job-list-item {
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    margin: 10px;
+    padding: 10px;
+    /* align-items: baseline; */
+    width: 500px;
+  }
+  
+  .job-container {
+    margin: 20px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .job-category {
+    font-weight: bold;
+  }
+  
+  .listing-block {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+  }
+  .listing-block div {
+    padding: 10px;
+  }
+  
+  .job-apply-btn {
+    background-color: #d16014;
+    color: #fff;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 0 10px;
+  }
+  .justify-center {
+    justify-content: flex-end;
+  }
+  
+  .job-description {
+    text-align: left;
+    line-height: 1.5rem;
+    font-size: 14px;
+    height: 100px;
+    overflow: scroll;
+    border-bottom: 1px solid;
+    box-shadow: inset 0 -10px 10px -10px #000;
+  }
+
+  .pill-button {
+    @extend .rounded-pill;
+    @extend .px-5;
+    @extend .m-2;
+    border-color: $secondary;
+    width: auto;
+    background-color: $white;
+    border-color: $secondary
+  }
